# shinkoku

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  shinkoku.config.example.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  test.yml
agents/: deduction-cert-reader.md  invoice-reader.md  payment-statement-reader.md  pdf-form-filler.md  receipt-reader.md  withholding-reader.md
docs/: system-overview.md  wsl-os-detection-workaround.md
docs/plans/: 2026-02-07-shinkoku-design.md  2026-02-07-shinkoku-implementation-plan.md
scripts/: compare_output.py  download_nta_specs.sh  extract_coordinates.py  extract_templates.py  generate_fitting_check.py  generate_test_xtx.py  generate_xtx.py  test_fit_blue_return.py  test_fit_consumption_tax.py  test_fit_detail_forms.py  test_fit_income_tax.py  test_fit_other_forms.py  verify_coordinates.py
skills/assess/: SKILL.md
skills/capabilities/: README.md  SKILL.md
skills/consumption-tax/: README.md  SKILL.md
skills/document/: README.md  SKILL.md
skills/e-bookkeeping-compliance/: SKILL.md
skills/e-tax/: README.md  SKILL.md
skills/filling-pdf/: README.md  SKILL.md
skills/furusato/: SKILL.md
skills/gather/: SKILL.md
skills/income-tax/: README.md  SKILL.md
skills/incorporation/: SKILL.md
skills/invoice-system/: SKILL.md
skills/journal/: SKILL.md
skills/reading-deduction-cert/: SKILL.md
skills/reading-invoice/: SKILL.md
skills/reading-payment-statement/: SKILL.md
skills/reading-receipt/: SKILL.md
skills/reading-withholding/: SKILL.md
skills/settlement/: README.md  SKILL.md
tests/: conftest.py
(+136 files in other folders)
