[project]
name = "shinkoku"
version = "0.1.0"
description = "確定申告自動化 Claude Code Plugin - MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "reportlab>=4.0",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
shinkoku = "shinkoku.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shinkoku"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "visual_regression: PDF visual regression tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
